# Cacherr

./: .cursorrules  .dockerignore  .env  .env.backup3  .env.example  .env.unified-example  .gitignore  AGENT_EXECUTION_GUIDE.md  ARCHITECTURAL_REFACTORING_PLAN.md  BROWSER_TEST_REPORT.md  CACHED_FILES_IMPLEMENTATION.md  CACHERR_REFACTORING_MASTER_PLAN.md  CLAUDE.md  CONFIG_MIGRATION_README.md  DEBUGGING_GUIDE.md  DEBUG_QUICK_REFERENCE.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.dev  Dockerfile.playwright  Dockerfile.server  Dockerfile.test  ENVIRONMENT_MIGRATION.md  ENVIRONMENT_VALIDATION_REPORT.md  FILE_SIZE_FIX_SUMMARY.md  INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  PHASE_3_REFACTORING_SUMMARY.md  PHASE_7_COMPLETION_SUMMARY.md  PHASE_8_REACT_FRONTEND_COMPLETION_SUMMARY.md  PHASE_9_PRODUCTION_AUDIT_REPORT.md  PLAYWRIGHT_SETUP.md  PRODUCTION_READINESS_REPORT.md  QWEN.md  README.md  README_DOCKER.md  ROLLBACK_PROCEDURES.md  SECURE_CACHED_FILES_SERVICE_GUIDE.md  TEST_REPORT.md  UNRAID_DEPLOYMENT_VALIDATION_REPORT.md  (+55 more)
.claude/: CLAUDE.md  settings.json  settings.local.example.json  settings.local.json
.codex/: AGENTS.md  config.toml
.cursor/: mcp-config.example.json
.cursor/commands/: build.md  design.md  design2.md
.github/workflows/: playwright-tests.yml
docker/: cacherr.xml
docs/: ARCHITECTURE.md  CACHED_TAB_API.md  CACHED_TAB_TESTING.md  FEATURE_PARITY.md  IMPORT_LISTS_DESIGN.md  README.md  REALTIME_WEBGUI_DESIGN.md  SECRETS_SETUP.md  TASKS.md  USER_MANAGEMENT_DESIGN.md  real-time-watching.md
docs/adr/: 001-dependency-injection.md  002-command-pattern.md  003-repository-pattern.md  004-configuration-management.md  index.md
docs/api/: configuration-endpoints.md
docs/architecture/: overview.md
docs/migration/: architecture-migration.md
e2e/: README.md  TESTING_STATUS.md  TEST_SUMMARY.md  dashboard.spec.ts  error-handling.spec.ts  responsive.spec.ts  run-tests.sh  settings.spec.ts  websocket.spec.ts
e2e/fixtures/: test-data.json
e2e/pages/: BasePage.ts  DashboardPage.ts  NavigationPage.ts  SettingsPage.ts
e2e/tests/: accessibility.spec.ts  api-health-check.spec.ts  basic.spec.ts  dashboard-comprehensive.spec.ts  dashboard.spec.ts  logs-debug.spec.ts  logs-tab.spec.ts  navigation-comprehensive.spec.ts  performance.spec.ts  responsive-error-handling.spec.ts  settings-comprehensive.spec.ts
e2e/utils/: mock-api.ts  (+5 more)
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
playwright-report/: index.html
plexcache/: plexcache_settings.json
scripts/: generate-test-report.js
src/: INTERFACES_README.md  __init__.py  app.py  application.py  main.py
test-results/: .last-run.json  results.json  test-summary.json
tests/: README.md  __init__.py  conftest.py  pytest.ini  requirements.txt  run_tests.py  setup.cfg  test_pydantic_config.py  test_secure_cached_files_service.py  validate_coverage.py
tests/integration/: __init__.py  conftest.py  run_integration_tests.py  test_application_integration.py  test_cached_api.py  test_config_api.py  test_health_api.py  test_logs_api.py  test_results_api.py  test_scheduler_api.py  test_trakt_api.py  test_watcher_api.py
tests/mocks/: __init__.py  service_mocks.py
tests/unit/: __init__.py  test_configuration_models.py  test_file_operations.py  test_file_utils.py  test_media_service.py  test_plex_operations.py  test_websocket_manager.py
tests/unit/core/: __init__.py  test_command_system.py  test_container.py
tests/unit/repositories/: __init__.py  test_cache_repository.py
tests/utils/: __init__.py  test_helpers.py
(+130 files in other folders)
