[metadata]
name = cacherr-tests
version = 1.0.0
description = Test suite for Cacherr application
author = Cacherr Team
license = MIT

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    *.egg-info,
    .venv,
    venv,
    .tox,
    .coverage,
    htmlcov,
    .pytest_cache,
    tests/fixtures,
    migrations

[isort]
profile = black
multi_line_output = 3
line_length = 88
known_first_party = src
skip =
    __pycache__,
    .venv,
    venv,
    build,
    dist,
    .tox,
    .coverage,
    htmlcov,
    .pytest_cache

[coverage:run]
source = src
branch = True
parallel = True
omit =
    */tests/*
    */test_*
    */__pycache__/*
    */migrations/*
    */venv/*
    */env/*
    src/__init__.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    def __str__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[tool:pytest]
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
addopts =
    --strict-markers
    --strict-config
    --verbose
    --tb=short
    --durations=10
    --durations-min=0.5
    --cov=src
    --cov-report=html:htmlcov
    --cov-report=term-missing:skip-covered
    --cov-report=xml:coverage.xml
    --cov-report=lcov:coverage.lcov
    --cov-fail-under=90
    --cov-branch
    --cov-context=test
    --asyncio-mode=auto

markers =
    unit: Unit tests (fast, isolated, < 0.1s)
    integration: Integration tests (slower, multiple components, < 1s)
    api: API endpoint tests (HTTP request/response testing)
    slow: Slow tests (may take several seconds, > 1s)
    performance: Performance/benchmark tests
    docker: Tests that require Docker environment
    external: Tests that require external services (Plex, webhooks)
    destructive: Tests that modify files/system state
    websocket: WebSocket functionality tests
    security: Security-related tests (auth, validation, permissions)
    repository: Repository layer tests (database operations)
    service: Service layer tests (business logic)
    middleware: Web middleware tests (auth, CORS, etc.)
    scheduler: Background task scheduler tests

[tool:mypy]
python_version = 3.11
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
disallow_untyped_decorators = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
strict_equality = True

[[tool:mypy.overrides]]
module = "tests.*"
ignore_errors = True

[tool:black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
  | __pycache__
)/
'''

[tool:ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool:ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]  # assert false
